# dot-ipd

./: gitignore  install.sh
cmake/: CMakeLists.txt  IPDcommands.cmake  IPDhelpers.cmake
github/workflows/: cmake-ci.yml
idea/: misc.xml
idea/codeStyles/: Project.xml
idea/inspectionProfiles/: IPD.xml  Project_Default.xml  profiles_settings.xml
lib/catch/: CMakeLists.txt
lib/libipd/: CMakeLists.txt
lib/libipd/include/: ipd.h  ipd_alloc_limit.h  libipd.h  libipd_alloc.h  libipd_io.h  libipd_program_test.h  libipd_test.h  libipd_version.h
lib/libipd/man/man3/: CHECK.3  CHECK_COMMAND.3  CHECK_EXEC.3  CHECK_POINTER.3  alloc_limit_set_no_limit.3  alloc_limit_set_peak.3  alloc_limit_set_total.3  fread_line.3  read_line.3  tracef.3
lib/libipd/man/man7/: RTIPD_ALLOC_LIMIT_PEAK.7  ipd_alloc_limit.7
lib/libipd/scripts/: 211_to_ipd.sh
lib/libipd/src/: alloc_rt.c  buffer.h  eprintf.c  program_test_rt.c  read_line.c  read_line.inc  replace_tmpnam.c  test_reporting.h  test_rt.c
test/: .gitignore  CMakeLists.txt  one_test.c
